# ComfyUI-Ultimate-Face-Fix

./: .gitignore  MODEL_MANIFEST.json  README.md  THIRD_PARTY_NOTICES.md  __init__.py  composite.py  detector.py  geometry.py  install.py  masking.py  nodes.py  pyproject.toml  pytest.ini  regions.py  requirements.txt  sampling.py  semantic.py  visuals.py
.github/workflows/: publish_action.yml
examples/: gen_to_img_face_fix_KREA_2_Turbo.json  gen_to_img_face_fix_SDXL.json  img_to_img_face_fix_KREA_2_Turbo.json  img_to_img_face_fix_SDXL.json  multi_face.json  single_face.json
scripts/: __init__.py  prepare_models.py
scripts/model_setup/: __init__.py  download.py  manager.py  prepare.py  segface.py  specs.py
tests/: conftest.py  test_analysis.py  test_composite.py  test_geometry.py  test_masking.py  test_nodes.py  test_prepare_models.py  test_sampling.py  test_workflows.py
ultimate_face_fix/: __init__.py
ultimate_face_fix/core/: __init__.py  auto_denoise.py  compositing.py  detection.py  geometry.py  masking.py  pipeline.py  previews.py  sampling.py  segmentation.py  types.py
ultimate_face_fix/nodes/: __init__.py  auto_denoise.py  common.py  detector_loader.py  face_fix.py  face_fix_extract.py  face_fix_process.py  parser_loader.py
web/: auto_denoise_preview.js
